--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -417,14 +417,14 @@ Notably, the strongest correlations were observed between the Noticing dimension
 The Not-Distracting and Not-Worrying subscales were generally positively correlated with IAS pairings, with a few exceptions: Not-Distracting showed minimal correlation with Cough/Sneeze (r = 0.0206) and Heart/Breathing (r = -0.007), while Not-Worrying had a low correlation with Itch/Bruise (r = 0.031).
 
 <!-- ICQ -->
-The Interoceptive Confusion Questionnaire (ICQ; @brewer2016alexithymia) was used to assess individuals' difficulties in interpreting non-affective physiological states, such as pain and hunger. The ICQ consists of 20 items rated on a scale from 1 ("Does not describe me") to 5 ("Describes me very well"), with higher scores indicating greater interoceptive confusion.
+The Interoceptive Confusion Questionnaire was used to assess individuals' difficulties in interpreting non-affective physiological states, such as pain and hunger. The ICQ consists of 20 items rated on a scale from 1 ("Does not describe me") to 5 ("Describes me very well"), with higher scores indicating greater interoceptive confusion.
 
 The ICQ showed weak to moderate negative correlations with all IAS pairings. The strongest correlation was observed with the Hunger/Thirsty pairing (r = 0.348), while the weakest was with the Itch/Bruise pairing (r = 0.207).
 
 #### Correlations with mood measures
 
-Mood disorders were assessed using several standardized measures, including the General Anxiety Disorder-2 [GAD-2; @kroenke2007anxiety], the State-Trait Anxiety Inventory [STAI; @spielberger1970manual] and its shorter version, the STAI-5 [@zsido2020development], Beck’s Depression Inventory [BDI; @beck1996beck], and the Mood and Feelings Questionnaire [MFQ; @messer1995development].
-Additionally, the Patient Health Questionnaire (PHQ) was administered in its 2-item [PHQ-2; @kroenke2003patient], 9-item [PHQ-9; @kroenke2001phq], and 15-item [PHQ-15; @kroenke2002phq] versions.
+Mood disorders were assessed using several standardized measures, including the General Anxiety Disorder-2 [GAD-2, @kroenke2007anxiety], the State-Trait Anxiety Inventory [STAI, @spielberger1970manual] and its shorter version, the STAI-5 [@zsido2020development], Beck’s Depression Inventory [BDI, @beck1996beck], and the Mood and Feelings Questionnaire [MFQ; @messer1995development].
+Additionally, the Patient Health Questionnaire (PHQ) was administered in its 2-item [PHQ-2; @kroenke2003patient], 9-item [PHQ-9; @kroenke2001phq], and 15-item [PHQ-15, @kroenke2002phq] versions.
 Finally, borderline personality traits were assessed using the McLean Screening Instrument for Borderline Personality Disorder [MSI-BPD; @zanarini2003zanarini].
 
 
